# IndiumRevolt.py

./: .env.example  .gitignore  .pylintrc  LICENSE  README.md  main.py  moderation.py  pyproject.toml
.github/workflows/: pylint.yml
cogs/: info.py  moderation.py
utils/: README.md  embed.py  emojis.py
